# DeepRepoSlides

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  deeprepo.toml  deeprepo.toml.example  start-mcp-servers.sh
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/analyzer-core/: Cargo.toml
crates/analyzer-core/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/diagrammer/: Cargo.toml
crates/diagrammer/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/publisher-ghpages/: Cargo.toml
crates/publisher-ghpages/src/: lib.rs
crates/site-mdbook/: Cargo.toml
crates/site-mdbook/src/: lib.rs
crates/slides/: Cargo.toml
crates/slides/src/: lib.rs
crates/summarizer/: Cargo.toml
crates/summarizer/src/: lib.rs
