[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "deeprepo-slides-mcp"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }

# 設定
config = { path = "../../crates/config" }
mcp-server = { path = "../../crates/mcp-server" }
analyzer-core = { path = "../../crates/analyzer-core" }
summarizer = { path = "../../crates/summarizer" }
diagrammer = { path = "../../crates/diagrammer" }
site-mdbook = { path = "../../crates/site-mdbook" }
slides = { path = "../../crates/slides" }
publisher-ghpages = { path = "../../crates/publisher-ghpages" }

