[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# 他のクレート
config = { path = "../config" }
analyzer-core = { path = "../analyzer-core" }
summarizer = { path = "../summarizer" }
diagrammer = { path = "../diagrammer" }
site-mdbook = { path = "../site-mdbook" }
slides = { path = "../slides" }
publisher-ghpages = { path = "../publisher-ghpages" }

