[package]
name = "publisher-ghpages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }
tempfile = "3.8"

# 設定
config = { path = "../config" }

